test/cli/test/any-all-wildcard-deprecated/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test1
  namespace: namespace1
spec:
  containers:
  - name: nginx
    image: nginx:latest

---
apiVersion: v1
kind: Pod
metadata:
  name: test2
  namespace: namespace2
spec: 
  containers:
  - name: nginx
    image: nginx

---
apiVersion: v1
kind: Pod
metadata:
  name: test3
  namespace: namespace3
spec: 
  containers:
  - name: nginx
    image: nginx
