test/cli/test/any-all-wildcard-deprecated/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: disallow-protected-namespaces
  resources:
  - namespace2/test2
  - namespace1/test1
  result: fail
  rule: disallow
